fixed layout issue with contact form, resolves #302

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -81,6 +81,9 @@
       display: block;
       margin-left: 190px;
     }
+    textarea.contact {
+      width: 318px;
+    }
   /* @end  */
 /* @end */
 
